# cloud-linux

./: .gitignore  MANIFEST.in  README.md  generate-users.py  makefile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.devcontainer  devcontainer.json
ansible/: Vagrantfile  cis90.yaml  inventory.yaml  site.yaml  sun-hwa-t1.yaml  sun-hwa-t2.yaml
arya/: generate-servers.py  values.yaml
cis-191/: boot_loaders_and_booting.md  deciphering_manual_pages.md  disk_partitioning.md  filesystems_and_mount.md  finding_things_with_find.md  grub.md  installing_and_removing_software.md  kernel_customization.md  linux_process_basics.md  logical_volume_management.md  navigating_the_filesystem.md  system_administration.md  system_monitoring_and_logging.md  using_qemu.md  using_ssh_on_your_vm.md  welcome.md
cis-192/: adminer.md  apache_configuration.md  databases_and_webapps.md  debugging_and_advanced_ssh.md  enable_https.md  installing_php.md  installing_php5.md  installing_wordpress.md  mysql.md  mysql_setup.md  network_map.md  nfs_configuration.md  opus_and_ssh.md  san.md  ssh___part_1.md
cis-193/: lab_1.md  lab_10_firewall.md  lab_11_ipsec_issues.md  lab_12_ipsec_transport.md  lab_2_secure_access_with_ssh.md  lab_3_pam.md  lab_4_extended_acls.md  lab_5_auditing.md  lab_6_encrypted_file_systems.md  lab_7_apparmor.md  lab_8_netfilter.md  lab_8_snorby.md
cis-90/: outline.md
group_vars/: os_CentOS.yaml  os_SLES.yaml  os_Ubuntu.yaml
keys/: generate-keys.py
labs/: bosslab.py  fileslab.py  fslab.py  iolab.py  islands.py  islands2.py  processlab.py  scavenge.py
libs/: setup.py
login-servers/: README.md  bigger-storage-patch.yaml  generate-arya.py  generate-keys.py  signer-app.yaml  values-arya.yaml  values-midterm1.yaml  values-midterm2.yaml  (+3 more)
(+482 files in other folders)
