[project]
name = "cloud-linux"
version = "0.1.0"
description = "My CIS-90 infrastructure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvasapi>=3.3.0",
    "flask>=3.1.0",
    "pynacl>=1.5.0",
    "pyte>=0.8.2",
    "textual>=2.1.2",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
