[project]
name = "cloud-linux"
version = "0.2.0"
description = "My CIS-90 infrastructure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "canvasapi>=3.3.0",
    "flask>=3.1.0",
    "psutil>=7.0.0",
    "pynacl>=1.5.0",
    "pyte>=0.8.2",
    "quart>=0.20.0",
    "textual>=2.1.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
kroz = "kroz.__main__:main"
cis90 = "kroz.__main__:cis90"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pex>=2.50.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.9.10",
    "textual-dev>=1.7.0",
]
